# learning-c-with-esp8266

./: .gitignore  .gitmodules  README.md  workspace.code-workspace
components/spi/: CMakeLists.txt  GraphicsTest.c  UpdatePartly.c  component.mk
components/spi/include/: u8g2_esp8266_hal.h
components/spi/src/: u8g2_esp8266_hal.c
components/tcp_server_example/: CMakeLists.txt  component.mk
components/tcp_server_example/include/: connect.h
components/tcp_server_example/src/: connect.c  tcp_server.c
esp8266-projects/components/spi/: CMakeLists.txt  GraphicsTest.c
esp8266-projects/components/tcp_server_example/: CMakeLists.txt  component.mk
esp8266-projects/event_group_example/: Makefile
esp8266-projects/event_group_example/main/: CMakeLists.txt
esp8266-projects/sockets_and_st7920/: CMakeLists.txt  Makefile
esp8266-projects/sockets_and_st7920/main/: CMakeLists.txt  server_task.c  sockets_and_st7920.c
esp8266-projects/spotify_client/: spotify_client.code-workspace
esp8266-projects/spotify_client/main/: CMakeLists.txt  main.c  (+9 more)
event_group_example/: CMakeLists.txt
event_group_example/main/: event_group_example.c
sockets_and_st7920/: CMakeLists.txt  Makefile
sockets_and_st7920/main/: CMakeLists.txt  Kconfig.projbuild  server_task.c  sockets_and_st7920.c
spotify_client/: CMakeLists.txt  export_idf_path.sh  spotify_client.code-workspace
spotify_client/main/: CMakeLists.txt  component.mk  encoder.c  main.c  parsejson.c  parseobjects.c  spotifyclient.c  strlib.c
spotify_client/main/include/: parsejson.h  parseobjects.h  spotifyclient.h  strlib.h
(+12 files in other folders)
